--- a/src/pages/congratulate/Congratulate.css
+++ b/src/pages/congratulate/Congratulate.css
@@ -4,7 +4,7 @@
   align-items: center;
   /* justify-content: center; */
   background-color: #fce3cf;
-  padding-top: 20%;
+  padding-top: 80px;
 }
 
 .header {
