--- a/src/pages/form/Form.css
+++ b/src/pages/form/Form.css
@@ -1,6 +1,6 @@
 .questionnaire {
   /* margin: 20px; */
-  padding: 80px;
+  padding: 120px;
 }
 
 .head-quest {
@@ -8,19 +8,59 @@
   color: #302b70;
 }
 
-.question {
-  padding-top: 20px;
+.h-up {
+  color: hsl(10, 79%, 58%);
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
-.batch {
+.row {
   display: flex;
-  margin: 10px;
+  flex-direction: row;
 }
 
-.answer {
-  padding-left: 10px;
-  font-size: 16px;
-  margin-bottom: 0;
+.check-section-q {
+  display: flex;
+  flex-direction: column;
+  padding-top: 10;
+}
+
+.check-up-q {
+  margin-top: 4px;
+  margin-left: 10px;
+  width: 16px;
+  height: 16px;
+  border: #302b70 solid 2px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.check-up-q input {
+  display: none;
+}
+
+.check-up-q .circle-q {
+  width: calc(60%);
+  height: calc(60%);
+  background-color: hsl(10, 79%, 58%);
+  border-radius: 50%;
+  display: inline-block;
+  opacity: 0;
+  transition: opacity 0.6s ease;
+}
+
+.check-up-q input:checked + .circle-q {
+  opacity: 1;
+}
+
+.p-quest {
+  margin-bottom: 4px;
+  padding-left: 0px;
+  color: #302b70;
 }
 
 .confirm {
@@ -68,4 +108,10 @@
 
 .search-field li:hover {
   color: #302b70;
+}
+
+.btn-quest {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
