--- a/src/pages/congratulate/Congratulate.css
+++ b/src/pages/congratulate/Congratulate.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   background-color: #fce3cf;
-  padding-top: 80px;
+  height: 100%;
 }
 
 .header {
@@ -13,20 +13,28 @@
 }
 
 .cta {
-  margin: 10%;
+  margin-left: 20%;
+  margin-right: 20%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  align-items: center;
 }
 
-.boxed {
+.sub-head {
+  color: hsl(10, 79%, 58%);
+  padding: 40px;
+}
+
+.p-box {
   display: flex;
   flex-direction: column;
-  width: 40%;
-  height: 10%;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.par {
+.pr {
+  font-weight: 400;
+  color: #302b70;
   font-size: 16px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
